Issue in the background color on mobile device solved

--- a/src/styles/docs/aside.module.scss
+++ b/src/styles/docs/aside.module.scss
@@ -66,6 +66,7 @@ $anchorColor: #142bfe;
   padding-right: 50px;
   padding-bottom: 100px;
   border-right: 1px solid #000;
+  background-color: #fff;
   transition: 200ms ease-in-out;
 
   &.open {
